--- a/index.html
+++ b/index.html
@@ -110,28 +110,28 @@
           <div class="todays_time_content">
             <p>days</p>
             <div>
-              <span>03</span>
+              <span id="dayOffer">00</span>
               <span>:</span>
             </div>
           </div>
           <div class="todays_time_content">
             <p>hours</p>
             <div>
-              <span>23</span>
+              <span id="hoursOffer">00</span>
               <span>:</span>
             </div>
           </div>
           <div class="todays_time_content">
             <p>minuts</p>
             <div>
-              <span>19</span>
+              <span id="minOffer">00</span>
               <span>:</span>
             </div>
           </div>
           <div class="todays_time_content">
             <p>seconds</p>
             <div>
-              <span>56</span>
+              <span id="secOffer">00</span>
             </div>
           </div>
         </div>
